--- a/vmlinux/microvm-kernel-arm64-5.10.config
+++ b/vmlinux/microvm-kernel-arm64-5.10.config
@@ -1032,7 +1032,7 @@ CONFIG_NETFILTER_XT_TARGET_MASQUERADE=y
 #
 # Xtables matches
 #
-# CONFIG_NETFILTER_XT_MATCH_ADDRTYPE is not set
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
 # CONFIG_NETFILTER_XT_MATCH_BPF is not set
 # CONFIG_NETFILTER_XT_MATCH_CGROUP is not set
 # CONFIG_NETFILTER_XT_MATCH_CLUSTER is not set
