Mount cgroups during init
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -80,7 +80,4 @@ services:
       target: dind-test
     environment:
       - DOCKER_TLS_CERTDIR=
-    command:
-      - /bin/sh
-      - -c
-      - mount -t cgroup cgroup /sys/fs/cgroup ; /usr/local/bin/dockerd-entrypoint.sh
+    command: /usr/local/bin/dockerd-entrypoint.sh
