Deprecate GUEST_HOSTNAME env var and share hostname with jailer
Ideally customizing the hostname of the VM should be as simple
as setting the hostname: instruction in the compose file.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -51,9 +51,8 @@ services:
     build:
       context: .
       target: alpine-test
-    environment:
-      - GUEST_HOSTNAME=alpine-test
     command: /usr/local/bin/healthcheck.sh
+    hostname: alpine-test
 
   debian-test:
     extends:
@@ -62,9 +61,8 @@ services:
     build:
       context: .
       target: debian-test
-    environment:
-      - GUEST_HOSTNAME=debian-test
     command: /usr/local/bin/healthcheck.sh
+    hostname: debian-test
 
   ubuntu-test:
     extends:
@@ -73,9 +71,8 @@ services:
     build:
       context: .
       target: ubuntu-test
-    environment:
-      - GUEST_HOSTNAME=ubuntu-test
     command: /usr/local/bin/healthcheck.sh
+    hostname: ubuntu-test
 
   dind-test:
     extends:
@@ -86,5 +83,5 @@ services:
       target: dind-test
     environment:
       - DOCKER_TLS_CERTDIR=
-      - GUEST_HOSTNAME=dind-test
     command: /usr/local/bin/dockerd-entrypoint.sh
+    hostname: dind-test
