Allow running menuconfig for non-native platforms
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/vmlinux/Makefile
+++ b/vmlinux/Makefile
@@ -1,16 +1,24 @@
+ARCH ?= $(shell uname -m)
 
-ifeq ($(shell uname -m),x86_64)
+ifeq ($(ARCH),x86_64)
 	CONFIG_FILE := microvm-kernel-x86_64-5.10.config
+	PLATFORM := linux/amd64
 else
 	CONFIG_FILE := microvm-kernel-arm64-5.10.config
+	PLATFORM := linux/arm64
 endif
 
 linux.git:
-	docker build --tag linux.git --target linux.git ../
+	docker build \
+		--platform $(PLATFORM) \
+		--tag linux.git \
+		--target linux.git ../
 
 menuconfig: linux.git
-	docker run --rm --mount type=bind,src=$(shell pwd)/,dst=/config/ linux.git \
-		sh -c 'cp -a /config/$(CONFIG_FILE) .config && make menuconfig && cp -a .config /config/$(CONFIG_FILE)'
+	docker run --rm -it \
+		--platform $(PLATFORM) \
+		--mount type=bind,src=$(shell pwd)/,dst=/config/ \
+		linux.git sh -c 'cp -a /config/$(CONFIG_FILE) .config && make menuconfig && cp -a .config /config/$(CONFIG_FILE)'
 
 clean:  
 	docker rmi linux.git
