--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -23,26 +23,17 @@ services:
         set -ex
         apk add --no-cache docker-cli-compose
 
-        count=0
-        while true; do
+        docker compose run --rm --remove-orphans alpine-test
+        docker compose logs --no-color alpine-test | grep "touch /mnt/data/healthy"
 
-          if [ $$count -gt 10 ]; then
-            echo "Timed out waiting for healthchecks to pass"
-            exit 1
-          fi
+        docker compose run --rm --remove-orphans debian-test
+        docker compose logs --no-color debian-test | grep "touch /mnt/data/healthy"
 
-          count=$$(($$count + 1))
+        docker compose run --rm --remove-orphans ubuntu-test
+        docker compose logs --no-color ubuntu-test | grep "touch /mnt/data/healthy"
 
-          sleep 3
-          
-          docker compose logs --no-color alpine-test | grep "touch /mnt/data/healthy" || continue
-          docker compose logs --no-color debian-test | grep "touch /mnt/data/healthy" || continue
-          docker compose logs --no-color ubuntu-test | grep "touch /mnt/data/healthy" || continue
-          docker compose logs --no-color dind-test | grep "Daemon has completed initialization" || continue
-
-          break
-
-        done
+        docker compose run --rm --remove-orphans dind-test
+        docker compose logs --no-color dind-test | grep "Daemon has completed initialization"
 
   alpine-test:
     extends:
@@ -83,5 +74,8 @@ services:
       target: dind-test
     environment:
       - DOCKER_TLS_CERTDIR=
-    command: /usr/local/bin/dockerd-entrypoint.sh
+    command:
+      - sh
+      - -c
+      - /usr/local/bin/dockerd-entrypoint.sh & sleep 60
     hostname: dind-test
