--- a/vmlinux/microvm-kernel-arm64-5.10.config
+++ b/vmlinux/microvm-kernel-arm64-5.10.config
@@ -1622,7 +1622,7 @@ CONFIG_VIRTIO_CONSOLE=y
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 # CONFIG_HW_RANDOM_BA431 is not set
-# CONFIG_HW_RANDOM_VIRTIO is not set
+CONFIG_HW_RANDOM_VIRTIO=y
 # CONFIG_HW_RANDOM_CCTRNG is not set
 # CONFIG_HW_RANDOM_XIPHERA is not set
 CONFIG_DEVMEM=y
@@ -1631,7 +1631,7 @@ CONFIG_DEVMEM=y
 # CONFIG_XILLYBUS is not set
 # end of Character devices
 
-# CONFIG_RANDOM_TRUST_CPU is not set
+CONFIG_RANDOM_TRUST_CPU=y
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 
 #
