--- a/vmlinux/microvm-kernel-x86_64-5.10.config
+++ b/vmlinux/microvm-kernel-x86_64-5.10.config
@@ -1625,7 +1625,12 @@ CONFIG_SERIAL_DEV_BUS=y
 CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 CONFIG_VIRTIO_CONSOLE=y
 # CONFIG_IPMI_HANDLER is not set
-# CONFIG_HW_RANDOM is not set
+CONFIG_HW_RANDOM=y
+# CONFIG_HW_RANDOM_TIMERIOMEM is not set
+# CONFIG_HW_RANDOM_BA431 is not set
+CONFIG_HW_RANDOM_VIA=y
+CONFIG_HW_RANDOM_VIRTIO=y
+# CONFIG_HW_RANDOM_XIPHERA is not set
 # CONFIG_MWAVE is not set
 CONFIG_DEVMEM=y
 # CONFIG_DEVKMEM is not set
@@ -1637,7 +1642,7 @@ CONFIG_DEVMEM=y
 # CONFIG_TELCLOCK is not set
 # end of Character devices
 
-# CONFIG_RANDOM_TRUST_CPU is not set
+CONFIG_RANDOM_TRUST_CPU=y
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 
 #
