--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -26,8 +26,8 @@ jobs:
     with:
       docker_runs_on: >
         {
-          "linux/amd64": ["self-hosted","X64"],
-          "linux/arm64": ["self-hosted","ARM64"]
+          "linux/amd64": ["self-hosted","runtime:container","X64"],
+          "linux/arm64": ["self-hosted","runtime:container","ARM64"]
         }
       docker_images: >
         ghcr.io/balena-io-experimental/ctr-jailer
