Test running arm32 docker images on arm64
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -11,3 +11,5 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # hadolint ignore=DL3016
 RUN npm ping && npm install express lodash moment
+
+RUN dpkg --print-architecture
