--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,7 +5,7 @@ services:
     image: alpine:3.18
     environment:
       DOCKER_HOST: unix:///var/run/docker.sock
-      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME:-ctr-jailer}
+      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME:-container-jail}
       COMPOSE_FILE: docker-compose.yml:docker-compose.test.yml
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
