--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -24,10 +24,11 @@ jobs:
       )
     secrets: inherit
     with:
+      # use ubuntu-latest for testing nested KVM
       docker_runs_on: >
         {
-          "linux/amd64": ["self-hosted","runtime:container","X64"],
-          "linux/arm64": ["self-hosted","runtime:container","ARM64"]
+          "linux/amd64": ["ubuntu-latest"],
+          "linux/arm64": ["ubuntu-latest"]
         }
       docker_images: >
         ghcr.io/balena-io-experimental/container-jail
